Minor UI bug fixed by removing car icon on small device

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -28,3 +28,15 @@
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   animation: logoAnimation 2s ease-in-out infinite;
 }
+
+.icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (max-width: 600px) {
+  .responsive-icon {
+    display: none;
+  }
+}
